objects/ssot__RegulatoryTransactionFee__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CalculationDateTime__c</fullName>
        <label>Calculation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CommentsText__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DueDateTime__c</fullName>
        <label>Due Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Regulatory Transaction Fee Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRecordId__c</fullName>
        <label>Parent Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRecordObject__c</fullName>
        <label>Parent Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryTransactionFeeStatus__c</fullName>
        <label>Regulatory Transaction Fee Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalFeeAmount__c</fullName>
        <label>Total Fee Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512778804_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryTransactionFee_ParentRecor_rel</label>
        <referenceTo>ssot__RegulatoryCodeViolation__dlm</referenceTo>
        <relationshipLabel>RegulatoryTransactionFee_ParentRecor_rel</relationshipLabel>
        <relationshipName>rel_1739512778804_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512780537_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryTransactionFee_AccountId_m_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>RegulatoryTransactionFee_AccountId_m_rel</relationshipLabel>
        <relationshipName>rel_1739512780537_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512786839_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryTransactionFee_ParentRecor_rel</label>
        <referenceTo>ssot__ViolationEnforcementAction__dlm</referenceTo>
        <relationshipLabel>RegulatoryTransactionFee_ParentRecor_rel</relationshipLabel>
        <relationshipName>rel_1739512786839_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>